--- a/.github/workflows/chart.yml
+++ b/.github/workflows/chart.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Publish helm chart
         uses: stefanprodan/helm-gh-pages@master
         with:
-          token: ${{ secrets.G_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
